--- a/agijagi/app/src/main/res/layout/fragment_profile_management.xml
+++ b/agijagi/app/src/main/res/layout/fragment_profile_management.xml
@@ -21,7 +21,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/button_profile_management_edit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar_profile_management">
@@ -190,7 +190,6 @@
                         android:hint="*********"
                         android:textSize="14sp" />
 
-
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
 
@@ -222,6 +221,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="9dp"
+                android:layout_marginBottom="32dp"
                 android:orientation="horizontal">
 
                 <com.google.android.material.checkbox.MaterialCheckBox
