--- a/agijagi/app/src/main/res/layout/fragment_chatting_list.xml
+++ b/agijagi/app/src/main/res/layout/fragment_chatting_list.xml
@@ -1,14 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".chatting.ChattingListFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/material_toolbar_chatting_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="user chat list" />
+        android:layout_height="wrap_content"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/Theme.AgijagiToolbar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:menu="@menu/menu_notification_list"
+        app:navigationIcon="@drawable/arrow_back_24px"
+        app:title="채팅" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/textview_chatting_list_empty_msg"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:text="채팅 기록이 없습니다"
+        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/layout_chatting_list_bottom_button"
+        app:layout_constraintTop_toBottomOf="@+id/material_toolbar_chatting_list" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_chatting_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="8dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/layout_chatting_list_bottom_button"
+        app:layout_constraintTop_toBottomOf="@+id/material_toolbar_chatting_list" />
+
+    <LinearLayout
+        android:id="@+id/layout_chatting_list_bottom_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerview_chatting_list">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_chatting_list_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_weight="1"
+            android:background="@drawable/narrow_box_rounded_button_stroke"
+            android:text="취소"
+            android:textColor="@color/jagi_brown" />
+
+        <Space
+            android:layout_width="4dp"
+            android:layout_height="match_parent" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_chatting_list_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/narrow_box_rounded_button_solid"
+            android:text="삭제"
+            android:textColor="@color/jagi_hint_color" />
+
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
