--- a/agijagi/app/src/main/res/layout/fragment_signup_seller.xml
+++ b/agijagi/app/src/main/res/layout/fragment_signup_seller.xml
@@ -61,7 +61,7 @@
                         android:id="@+id/editinput_signup_seller_registration_number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="사업자등록번호"
+                        android:hint="사업자등록번호 ( 01 - 000 - 0000 )"
                         android:textColorHint="@color/transparency" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -110,7 +110,7 @@
                         android:id="@+id/editinput_signup_seller_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="비밀번호 (공백 제외, 4자 이상)"
+                        android:hint="비밀번호 (공백 제외, 6 ~ 15 자)"
                         android:inputType="textPassword"
                         android:textColorHint="@color/transparency" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -161,7 +161,7 @@
                         android:id="@+id/editinput_signup_seller_business_number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="사업장 전화번호"
+                        android:hint="사업장 전화번호 ( 010 - 0000 - 0000 )"
                         android:textColorHint="@color/transparency" />
                 </com.google.android.material.textfield.TextInputLayout>
 
